force-app/main/default/objects/Account/fields/CoE_Partner_involvement__c.field-meta.xml
<CustomField>
    <fullName>CoE_Partner_involvement__c</fullName>
    <label>CoE Partner involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Partner involved in CoE setup</fullName>
            </value>
            <value>
                <fullName>No partner involved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>