force-app/main/default/objects/Account/fields/CoE_responsibilities__c.field-meta.xml
<CustomField>
    <fullName>CoE_responsibilities__c</fullName>
    <label>CoE responsibilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enablement</fullName>
            </value>
            <value>
                <fullName>Governance</fullName>
            </value>
            <value>
                <fullName>Solution delivery</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Providing accelerators</fullName>
            </value>
            <value>
                <fullName>Evangelism</fullName>
            </value>
            <value>
                <fullName>Managing Community of Practice</fullName>
            </value>
            <value>
                <fullName>IT Operations</fullName>
            </value>
            <value>
                <fullName>Providing managed service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>