force-app/main/default/objects/Account/fields/CoE_size_in_FTEs__c.field-meta.xml
<CustomField>
    <fullName>CoE_size_in_FTEs__c</fullName>
    <label>CoE size in FTEs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 or less</fullName>
            </value>
            <value>
                <fullName>3-5</fullName>
            </value>
            <value>
                <fullName>6-9</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>