force-app/main/default/objects/Account/fields/Comments_on_Reference__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Reference__c</fullName>
    <label>Comments on Reference</label>
    <type>TextArea</type>
</CustomField>