force-app/main/default/objects/Account/fields/Comments_on_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Segmentation__c</fullName>
    <label>Comments on Segmentation</label>
    <type>TextArea</type>
</CustomField>