force-app/main/default/objects/Account/fields/CommentsContract__c.field-meta.xml
<CustomField>
    <fullName>CommentsContract__c</fullName>
    <label>Comments on Contract</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>