force-app/main/default/objects/Account/fields/CommentsExpansion__c.field-meta.xml
<CustomField>
    <fullName>CommentsExpansion__c</fullName>
    <label>Comments on Expansion</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>