force-app/main/default/objects/Account/fields/CommentsRenewal__c.field-meta.xml
<CustomField>
    <fullName>CommentsRenewal__c</fullName>
    <label>Comments on Renewal</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>