force-app/main/default/objects/Account/fields/Common_Room_Org_Link__c.field-meta.xml
<CustomField>
    <fullName>Common_Room_Org_Link__c</fullName>
    <description>Link to organization&apos;s profile in Common Room.  Populated by CommonRoom sync</description>
    <inlineHelpText>Org&apos;s Common Room Profile</inlineHelpText>
    <label>Common Room Org Link</label>
    <type>TextArea</type>
</CustomField>