force-app/main/default/objects/Account/fields/commonroom__CR_Account_Active_Members_All_Time__c.field-meta.xml
<CustomField>
    <fullName>commonroom__CR_Account_Active_Members_All_Time__c</fullName>
    <label>Number of Active members (All Time)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>