force-app/main/default/objects/Account/fields/commonroom__CR_Account_Impact_Points_12_weeks__c.field-meta.xml
<CustomField>
    <fullName>commonroom__CR_Account_Impact_Points_12_weeks__c</fullName>
    <label>Impact points (P12W)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>