force-app/main/default/objects/Account/fields/commonroom__CR_Number_of_Active_members_P12W__c.field-meta.xml
<CustomField>
    <fullName>commonroom__CR_Number_of_Active_members_P12W__c</fullName>
    <label>Number of Active members (P12W)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>