force-app/main/default/objects/Account/fields/Community_Active_Members_12_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Community_Active_Members_12_Weeks__c</fullName>
    <description>Number of employees who have engaged in the community in the past 12 weeks. Populated by CommonRoom sync</description>
    <inlineHelpText>Recent number of employees in the community.</inlineHelpText>
    <label>Community # Active Members 12 Weeks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>