force-app/main/default/objects/Account/fields/Community_Active_Members_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Community_Active_Members_All_Time__c</fullName>
    <description>Number of employees who have engaged in the community at any point in time. Populated by CommonRoom sync</description>
    <inlineHelpText>Number of employees who have engaged in the community at any point in time.</inlineHelpText>
    <label>Community # Active Members All Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>