force-app/main/default/objects/Account/fields/Community_First_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Community_First_Active_Date__c</fullName>
    <description>Date of the first activity associated with this organization. Populated by CommonRoom sync</description>
    <inlineHelpText>Date of first activity</inlineHelpText>
    <label>Community - First Active Date</label>
    <type>Date</type>
</CustomField>