force-app/main/default/objects/Account/fields/Community_First_Activity_Source__c.field-meta.xml
<CustomField>
    <fullName>Community_First_Activity_Source__c</fullName>
    <description>Where the first activity associated with this organization occured. Populated by CommonRoom sync</description>
    <inlineHelpText>First engaged community platform</inlineHelpText>
    <label>Community - First Activity Source</label>
    <type>TextArea</type>
</CustomField>