force-app/main/default/objects/Account/fields/Community_Impact_Points_12_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Community_Impact_Points_12_Weeks__c</fullName>
    <description>Number of impact points earned by associated community members over the past 12 weeks.  Populated by CommonRoom sync</description>
    <inlineHelpText>Past 12 weeks Impact Points</inlineHelpText>
    <label>Community Impact Points 12 Weeks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>