force-app/main/default/objects/Account/fields/Community_Impact_Points_All_Time__c.field-meta.xml
<CustomField>
    <fullName>Community_Impact_Points_All_Time__c</fullName>
    <description>Total number of impact points earned by all associated community members. Populated by CommonRoom sync</description>
    <inlineHelpText>All time Impact Points</inlineHelpText>
    <label>Community Impact Points All Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>