force-app/main/default/objects/Account/fields/Community_Last_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Community_Last_Active_Date__c</fullName>
    <description>Date of the most recent activity associated with this organization.  Populated by CommonRoom sync</description>
    <inlineHelpText>Date of most recent activity</inlineHelpText>
    <label>Community - Last Active Date</label>
    <type>Date</type>
</CustomField>