force-app/main/default/objects/Account/fields/Community_Last_Active_Source__c.field-meta.xml
<CustomField>
    <fullName>Community_Last_Active_Source__c</fullName>
    <description>Where the most recent activity associated with the organization occured. Populated by CommonRoom sync</description>
    <inlineHelpText>Most recently engaged community platform</inlineHelpText>
    <label>Community - Last Active Source</label>
    <type>TextArea</type>
</CustomField>