force-app/main/default/objects/Account/fields/Contact_EnterpriseTrials__c.field-meta.xml
<CustomField>
    <fullName>Contact_EnterpriseTrials__c</fullName>
    <label>Contact.EnterpriseTrials</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>