force-app/main/default/objects/Account/fields/Contact_Events_Registered_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Events_Registered_Rollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contact Events Registered Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>