force-app/main/default/objects/Account/fields/Contact_LastADRActivityDate__c.field-meta.xml
<CustomField>
    <fullName>Contact_LastADRActivityDate__c</fullName>
    <description>Last date when an Account Development Representative did an activity in the account contacts. Calculated in Apex Rollup.</description>
    <label>Contact Last ADR Activity Date</label>
    <type>Date</type>
</CustomField>