force-app/main/default/objects/Account/fields/Contact_UltimateActivityDate__c.field-meta.xml
<CustomField>
    <fullName>Contact_UltimateActivityDate__c</fullName>
    <description>for lost opp view</description>
    <label>Contact.UltimateActivityDate</label>
    <type>Date</type>
</CustomField>