force-app/main/default/objects/Account/fields/ContactEngagementLast120Days__c.field-meta.xml
<CustomField>
    <fullName>ContactEngagementLast120Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>deprecated -ContactEngagementLast120Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>