force-app/main/default/objects/Account/fields/ContactNumberofSessionsRollup__c.field-meta.xml
<CustomField>
    <fullName>ContactNumberofSessionsRollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contact Number of Sessions Rollup</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>