force-app/main/default/objects/Account/fields/ContactPageViewsRollup__c.field-meta.xml
<CustomField>
    <fullName>ContactPageViewsRollup__c</fullName>
    <label>Contact Page Views Rollup</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>