force-app/main/default/objects/Account/fields/Contacts_with_Action_Required_30_days__c.field-meta.xml
<CustomField>
    <fullName>Contacts_with_Action_Required_30_days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rollup showing the number of contacts that had an action required in the last 30 days</description>
    <label># Contacts with Action Required (30 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>