force-app/main/default/objects/Account/fields/Contacts_with_c8_Trial__c.field-meta.xml
<CustomField>
    <fullName>Contacts_with_c8_Trial__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by Rollup Helper, for use in Assisted Onboarding</description>
    <label># Contacts with Activated C8 Trial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>