force-app/main/default/objects/Account/fields/Contacts_with_First_Strike__c.field-meta.xml
<CustomField>
    <fullName>Contacts_with_First_Strike__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by Rollup Helper, for use in Assisted Onboarding</description>
    <label># Contacts with First Strike</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>