force-app/main/default/objects/Account/fields/ContractDate__c.field-meta.xml
<CustomField>
    <fullName>ContractDate__c</fullName>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>