force-app/main/default/objects/Account/fields/ContractEffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEffectiveStartDate__c</fullName>
    <inlineHelpText>Date of the partner contract start date for this Account.</inlineHelpText>
    <label>Partner Agreement - Start Date</label>
    <type>Date</type>
</CustomField>