force-app/main/default/objects/Account/fields/ContractExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExpirationDate__c</fullName>
    <label>(Deprecated) Contract Expiration Date</label>
    <type>Date</type>
</CustomField>