force-app/main/default/objects/Account/fields/ContractualBasis__c.field-meta.xml
<CustomField>
    <fullName>ContractualBasis__c</fullName>
    <label>Contractual Basis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited by FNI/EDE</fullName>
            </value>
            <value>
                <fullName>Limited by Scope/Project</fullName>
            </value>
            <value>
                <fullName>Limited by Cores</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>