force-app/main/default/objects/Account/fields/Covid19OutreachSent__c.field-meta.xml
<CustomField>
    <fullName>Covid19OutreachSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covid 19 Outreach Sent</label>
    <type>Checkbox</type>
</CustomField>