force-app/main/default/objects/Account/fields/CSM_Effort_Score__c.field-meta.xml
<CustomField>
    <fullName>CSM_Effort_Score__c</fullName>
    <formula>CSM_ES_Segment__c * 0.2 +
CSM_ES_First_Year__c * 0.1 +
CSM_ES_Fit_Score__c * 0.1 +
CSM_ES_Projects__c * 0.3 +
CSM_ES_Engagement_Score__c * 0.1 +
CSM_ES_ARR__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Effort Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>