force-app/main/default/objects/Account/fields/CSM_ES_ARR__c.field-meta.xml
<CustomField>
    <fullName>CSM_ES_ARR__c</fullName>
    <formula>IF((ARR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))) &lt;= 39816.77, 0,
IF((ARR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))) &lt;= 57010.59, 0.2,
IF((ARR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))) &lt;= 79944.51, 0.4,
IF((ARR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))) &lt;= 141248.61, 0.6,
IF((ARR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))) &lt;= 296775.25, 0.8,
1
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM ES - ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>