force-app/main/default/objects/Account/fields/CSM_ES_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>CSM_ES_Engagement_Score__c</fullName>
    <formula>CASE(EngagementScoreABC__c, &quot;A&quot;, 1, &quot;B&quot;, 0.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM ES - Engagement Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>