force-app/main/default/objects/Account/fields/CSM_ES_First_Year__c.field-meta.xml
<CustomField>
    <fullName>CSM_ES_First_Year__c</fullName>
    <formula>IF( YearsCustomer__c &lt;= 1, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM ES - First Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>