force-app/main/default/objects/Account/fields/CSM_ES_Projects__c.field-meta.xml
<CustomField>
    <fullName>CSM_ES_Projects__c</fullName>
    <formula>IF(Total_Active_Customer_Projects__c &gt; 4, 1, IF(Total_Active_Customer_Projects__c = 1, 0.5, 0.75))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM ES - # Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>