force-app/main/default/objects/Account/fields/CSM_ES_Segment__c.field-meta.xml
<CustomField>
    <fullName>CSM_ES_Segment__c</fullName>
    <formula>CASE(Current_Customer_Segment__c,&quot;Key&quot;,1,&quot;Focus&quot;,0.5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM ES - Segment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>