force-app/main/default/objects/Account/fields/CSM_support_for_CoEs__c.field-meta.xml
<CustomField>
    <fullName>CSM_support_for_CoEs__c</fullName>
    <label>CSM support for CoEs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSM influenced CoE setup</fullName>
            </value>
            <value>
                <fullName>Supporting - Customer has setup CoE without CSM</fullName>
            </value>
            <value>
                <fullName>Presented CoE concept</fullName>
            </value>
            <value>
                <fullName>Planning to engage</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>