force-app/main/default/objects/Account/fields/CSMStatus__c.field-meta.xml
<CustomField>
    <fullName>CSMStatus__c</fullName>
    <label>CSM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Early Stage</fullName>
            </value>
            <value>
                <fullName>Regular Engagement</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>