force-app/main/default/objects/Account/fields/CSMType__c.field-meta.xml
<CustomField>
    <fullName>CSMType__c</fullName>
    <label>(Deprecated) CSM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CSMType</valueSetName>
    </valueSet>
</CustomField>