force-app/main/default/objects/Account/fields/Customer_Goals__c.field-meta.xml
<CustomField>
    <fullName>Customer_Goals__c</fullName>
    <description>How many has a goals have been added to Gainsight for customer

Source: GS Rules Engine

Owner: CS</description>
    <label># Customer Goals</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>