force-app/main/default/objects/Account/fields/Customer_Segment_Before_Churn__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Before_Churn__c</fullName>
    <label>Customer Segment Before Churn</label>
    <length>250</length>
    <type>Text</type>
</CustomField>