force-app/main/default/objects/Account/fields/Customer_Segment_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Change_Reason__c</fullName>
    <label>Customer Segment - Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segment assigned based on ARR &amp; Year as Customer</fullName>
                <label>Segment assigned based on current ARR, active pipeline and potential ARR</label>
            </value>
            <value>
                <fullName>Demoted because lack of Expand Pipeline</fullName>
            </value>
            <value>
                <fullName>Promoted because of Active Pipeline</fullName>
            </value>
            <value>
                <fullName>Promoted because of Potential ARR</fullName>
            </value>
            <value>
                <fullName>Promoted because of Active Pipeline &amp; Potential ARR</fullName>
            </value>
            <value>
                <fullName>Promoted because of other reasons</fullName>
            </value>
            <value>
                <fullName>Demoted because of Active Pipeline</fullName>
            </value>
            <value>
                <fullName>Demoted because of Potential ARR</fullName>
            </value>
            <value>
                <fullName>Demoted because of Active Pipeline &amp; Potential ARR</fullName>
            </value>
            <value>
                <fullName>Promoted because of Expand Pipeline</fullName>
            </value>
            <value>
                <fullName>Demoted because of other reasons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>