force-app/main/default/objects/Account/fields/Customer_Segment_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Change_Type__c</fullName>
    <label>Customer Segment - Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Demotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>