force-app/main/default/objects/Account/fields/Customer_Segment_Change_Type_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Change_Type_Deprecated__c</fullName>
    <formula>IF(
   OR(AND(ISPICKVAL(Customer_Segment__c,&apos;Key&apos;),NOT(ISPICKVAL(Current_Customer_Segment__c,&apos;Key&apos;))),
      AND(ISPICKVAL(Customer_Segment__c,&apos;Focus&apos;),ISPICKVAL(Current_Customer_Segment__c,&apos;Standard&apos;))),
   &apos;Downgrade&apos;,
   IF(
      OR(AND(ISPICKVAL(Customer_Segment__c,&apos;Focus&apos;),ISPICKVAL(Current_Customer_Segment__c,&apos;Key&apos;)),
         AND(ISPICKVAL(Customer_Segment__c,&apos;Standard&apos;),NOT(ISPICKVAL(Current_Customer_Segment__c,&apos;Standard&apos;)))),
      &apos;Upgrade&apos;,
      &apos;&apos;
      )	
)</formula>
    <label>Customer Segment - Change TypeDeprecated</label>
    <type>Text</type>
</CustomField>