force-app/main/default/objects/Account/fields/Customer_Segment_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>