force-app/main/default/objects/Account/fields/Customer_Segment_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Last_Modified_Date__c</fullName>
    <label>Segment Last Modified Date</label>
    <type>DateTime</type>
</CustomField>