force-app/main/default/objects/Account/fields/Customer_Segment_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_Score__c</fullName>
    <description>This field stores the score (0 - 100) assigned to the account based on Total Account ARR, Potential ARR and Active Pipeline. It is utilized for customer segmentation assignment purposes.</description>
    <formula>Total_Account_ARR_Score__c + Potential_ARR_Score__c + Active_Pipeline_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment (Score)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>