force-app/main/default/objects/Account/fields/CustomerStage__c.field-meta.xml
<CustomField>
    <fullName>CustomerStage__c</fullName>
    <label>Customer Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>PreProduction</fullName>
                <label>Development</label>
            </value>
            <value>
                <fullName>PostProduction</fullName>
                <label>Production</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>