force-app/main/default/objects/Account/fields/CustomerSuccessOwner__c.field-meta.xml
<CustomField>
    <fullName>CustomerSuccessOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerSuccessOwner</relationshipName>
    <type>Lookup</type>
</CustomField>