force-app/main/default/objects/Account/fields/Data_Quality_CSM_Owner__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_CSM_Owner__c</fullName>
    <formula>IF(LEN(CustomerSuccessOwner__c)!=0, &quot;CSM assigned&quot;, &quot;CSM not assigned&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality CSM Owner</label>
    <type>Text</type>
</CustomField>