force-app/main/default/objects/Account/fields/Data_Quality_Customer_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Customer_Accounts__c</fullName>
    <formula>IF(ISPICKVAL(RelationshipStatus__c,&quot;Active&quot;)&amp;&amp;$RecordType.Name=&quot;Standard&quot;,&quot;Customer&quot;,IF(ISPICKVAL(RelationshipStatus__c,&quot;Former&quot;)&amp;&amp;$RecordType.Name=&quot;Standard&quot;,&quot;Former Customer&quot;,&quot;Non Customer&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Customer Accounts</label>
    <type>Text</type>
</CustomField>