force-app/main/default/objects/Account/fields/Data_Quality_Number_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Number_Renewals__c</fullName>
    <formula>IF(Renewal_Opportunities__c &gt; 0, &quot;Customer with renewal opps&quot;, &quot;Customer without renewal opps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Number Renewals</label>
    <type>Text</type>
</CustomField>