force-app/main/default/objects/Account/fields/Data_Quality_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Owner_User__c</fullName>
    <formula>IF(Owner.IsActive = TRUE,&quot;Active User Owner&quot;,&quot;Inactive User Owner&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Owner User</label>
    <type>Text</type>
</CustomField>