force-app/main/default/objects/Account/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>IF(ISPICKVAL(EmployeesRange__c,&quot;&quot;),0,1) + IF(LEN(EmailDomain__c)=0,0,1) + IF(LEN(Website)=0,0,1) + IF(ISPICKVAL(Industry,&quot;&quot;),0,1) + IF(ISPICKVAL(SalesTeam__c,&quot;&quot;),0,1) + IF(ISPICKVAL(SalesTerritoryAE__c,&quot;&quot;),0,1) + IF(LEN(BillingStreet)=0||LEN(BillingCity)=0||LEN(BillingPostalCode)=0||LEN(BillingCountry)=0,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>