force-app/main/default/objects/Account/fields/Days_As_ABM__c.field-meta.xml
<CustomField>
    <fullName>Days_As_ABM__c</fullName>
    <description># of days this Account is Prioritized Target</description>
    <formula>today() - datevalue(LatestBecameABMAccount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText># of days this Account is Prioritized Target</inlineHelpText>
    <label>Days_As_ABM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>