force-app/main/default/objects/Account/fields/Deploying_Microservices_Architecture__c.field-meta.xml
<CustomField>
    <fullName>Deploying_Microservices_Architecture__c</fullName>
    <label>Deploying Microservices Architecture</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>