force-app/main/default/objects/Account/fields/Digital_Transformation_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Digital_Transformation_Initiatives__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Transformation Initiatives</label>
    <type>Checkbox</type>
</CustomField>