force-app/main/default/objects/Account/fields/Do_No_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_No_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>