force-app/main/default/objects/Account/fields/EarliestContactMQLDate__c.field-meta.xml
<CustomField>
    <fullName>EarliestContactMQLDate__c</fullName>
    <description>rollup helper</description>
    <label>Earliest Contact MQL Date</label>
    <type>Date</type>
</CustomField>