force-app/main/default/objects/Account/fields/EarliestLeadMQLDate__c.field-meta.xml
<CustomField>
    <fullName>EarliestLeadMQLDate__c</fullName>
    <description>rollup helper</description>
    <label>Earliest Lead MQL Date</label>
    <type>Date</type>
</CustomField>