force-app/main/default/objects/Account/fields/EarliestMQLDate__c.field-meta.xml
<CustomField>
    <fullName>EarliestMQLDate__c</fullName>
    <formula>if(EarliestContactMQLDate__c&lt; EarliestLeadMQLDate__c,EarliestContactMQLDate__c,EarliestLeadMQLDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest MQL Date</label>
    <type>Date</type>
</CustomField>