force-app/main/default/objects/Account/fields/Egnyte_Custom_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Egnyte_Custom_Folder_Name__c</fullName>
    <formula>IF(RIGHT(Name,1)=&quot;.&quot;,LEFT(Name,LEN(Name)-1)&amp;&quot;_&quot;,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Egnyte Custom Folder Name</label>
    <type>Text</type>
</CustomField>