force-app/main/default/objects/Account/fields/Egnyte_Custom_Path__c.field-meta.xml
<CustomField>
    <fullName>Egnyte_Custom_Path__c</fullName>
    <formula>&quot;/Salesforce.com/Accounts/&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Egnyte Custom Path</label>
    <type>Text</type>
</CustomField>